--- a/index.html
+++ b/index.html
@@ -5,9 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="./main.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
 </head>
 <body>
-    xxxx
-    
+    <div id="wrapper">
+        <div class="container" id="slide">
+            <img src="./img/1.png" alt="" width="300">
+            <img src="./img/2.png" alt="" width="300">
+            <img src="./img/3.png" alt="" width="300">
+            <img src="./img/4.jpg" alt="" width="300">
+        </div>
+        <div id="prevNext" >
+            <button id="previous">上一张</button>
+            <button  id="next">下一张</button>
+        </div>
+        <div id="button">
+            <button>第一张</button>
+            <button>第二张</button>
+            <button>第三张</button>
+            <button>第四张</button>
+        </div>
+    </div>
+    <script src="./main.js"></script>
 </body>
 </html>
